--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
     <meta charset="UTF-8">
     <title>Pão de queijo</title>
 </head>
-<body bgcolor="#f2aee7" style="margin: 0%;">
+<body  style="background-color: #f27d16; margin: 0%;">
     <header style="width: 1000px; height: 120px; margin: auto;">
-        <nav style="width: 230px; height: 120px;float: right;">
-            <a href="#">Home |</a>
-            <a href="#">Sobre |</a>
-            <a href="#">Produtos |</a>
-            <a href="#">Contato</a>
+        <nav style="width: 230px; height: 120px;">
+            <a href="#" style="color: black;">Home |</a>
+            <a href="/sobre.html" style="color: black;">Sobre |</a>
+            <a href="/produtos.html" style="color: black;">Produtos |</a>
+            <a href="/contato.html" style="color: black;">Contato</a>
       
             <br><br>
             
-            <div id="logo" style="width: 200px; height: 150px;">
-                <img src="/pao.png" alt="Slogan queijo" style="width: 200px; height: 150px;">
+            <div id="logo" style="width: 650px; height: 500px;border: 1ps solid black; ">
+                <img src="/lodoqueijo.png" alt="Slogan queijo" style="width: 650px; height: 500px; margin-left: 500px;">
             </div>
         </nav>
-       dwdwadwadsadsad
     </header>
     <main>
         <section>
-
+          <h2>Apresentação:</h2>
+          <p> O pao de quiejo é um dos simbolos mais autênticos da culinaria mineira e vem<br> conquistando paladares em todo o Brasil e no mundo.Nosso comércio tem como<br>proposito levar essa iguaria tradicional a um públicocada vez maior,mantendo<br>a receita artesanal,com ingredientes de qualidade e o sabor caracteristico que remete<br>a cozinha da roça. Oferecemos produtos frescos,congelados e pequenos para consumo.</p>
         </section>
+        <Section>
+            <H4>Mineiro no sabor, irresistível no crocante.</H4>
+        </Section>
     </main>
+   
+    <br><br>
+
+
+        <footer>
+            &copy; Todos os direitos reservados.
+        </footer>
 </body>
 </html>
